# AoC2025

./: AdventOfCode.cabal  LICENSE  README.md
app/: Aoc1.hs  Aoc10.hs  Aoc11.hs  Aoc2.hs  Aoc3.hs  Aoc4.hs  Aoc5.hs  Aoc6.hs  Aoc7.hs  Aoc8.hs  Aoc9.hs  Main.hs
