cabal-version:   3.0
name:            AdventOfCode
version:         0.1.0.0
license:         BSD-3-Clause
license-file:    LICENSE
author:          Minsoo Ha
maintainer:      minsoo0926@naver.com
build-type:      Simple
extra-doc-files: CHANGELOG.md

common warnings
    ghc-options: -Wall

executable AdventOfCode
    import:           warnings
    main-is:          Main.hs
    build-depends:    base ^>=4.18.3.0, mtl, containers, split
    hs-source-dirs:   app
    other-modules:    Aoc1, Aoc2, Aoc3, Aoc4, Aoc5, Aoc6, Aoc7, Aoc8, Aoc9, Aoc10, Aoc11
    default-language: Haskell2010
